Set Option 2 On option Indexes and create new passwd

--- a/download/.htaccess
+++ b/download/.htaccess
@@ -1,7 +1,5 @@
 Options All  +Indexes
 AuthType Basic
 AuthName "simpleparser"
-AuthUserFile /var/www/dev/data/www/dev.hyperdomen.com/slp/dowload/.htpasswd
+AuthUserFile /var/www/dev/data/www/dev.hyperdomen.com/slp/download/.htpasswd
 Require valid-user
-Order deny,allow
-Allow from all
